# qhuantax

./: .gitattributes  .gitignore  pyproject.toml
scripts/: FuzzySphereMeasurement.py  FuzzySphereNESDiagonalize.py  FuzzySphereNESTrain.py  FuzzySphereTrain.py  FuzzySphereTrainDiagnosis.py  FuzzySphereTrainLzTransfer.py  FuzzySphereTrainLzTransferDiagnosis.py  FuzzySphereTrainSMA.py  LaughlinTraining.py  LaughlinTrainingSupervised.py
src/: __init__.py  quantumhall_actionsymmetries.py  quantumhall_models.py  quantumhall_operators.py  quantumhall_optimizers.py  quantumhall_samplers.py  quantumhall_states.py  quantumhall_symmetries.py  quantumhall_userbasis.py  quantumhall_utils.py
src/nes/: __init__.py  det_sampler.py  optimizer.py  state_set.py  subspace.py
