[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qhuantax"
version = "0.1.0"
description = "Quantum Hall extensions for Quantax"
requires-python = ">=3.10"
dependencies = [
    "quantax==0.2.1",
    "jax",
    "equinox",
    "numpy",
    "scipy",
    "quspin==1.0.0",
    "matplotlib",
    "jaxtyping",
]

[tool.setuptools]
packages = ["qhuantax"]
package-dir = { "qhuantax" = "src" }
